src/test/deca/context/invalid/inheritance/override_wrong_signature_2.deca
// Description :
//    Redéfinition d'une méthode avec un type de paramètre différent.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : Signature pas convenable en override avec la super classe

class A {
    int f(int x) {
        return x;
    }
}

class B extends A {
    int f(float x) {
        return 0;
    }
}

{
}

